# video-subtitle-detect-and-moves

./: CMakeLists.txt  README.md  index.html  main.cpp  pixel_processor.hpp  subtitle_detector.hpp
